force-app/main/default/objects/Car__c/Car__c.object-meta.xml
<CustomObject>
    <description>Basic car object</description>
    <label>New Car</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>