force-app/main/default/objects/Car__c/fields/Car_Brand__c.field-meta.xml
<CustomField>
    <fullName>Car_Brand__c</fullName>
    <description>Brand of Car</description>
    <label>Car Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>