force-app/main/default/objects/Car__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>Brand of Car</description>
    <label>Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>