force-app/main/default/objects/Car__c/fields/Model1__c.field-meta.xml
<CustomField>
    <fullName>Model1__c</fullName>
    <label>Model1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Make__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civic</fullName>
            </value>
            <value>
                <fullName>Accord</fullName>
            </value>
            <value>
                <fullName>Odyssey</fullName>
            </value>
            <value>
                <fullName>Camery</fullName>
            </value>
            <value>
                <fullName>Corrolla</fullName>
            </value>
            <value>
                <fullName>Raptor</fullName>
            </value>
            <value>
                <fullName>Taurus</fullName>
            </value>
            <value>
                <fullName>Model 3</fullName>
            </value>
            <value>
                <fullName>Model s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>