force-app/main/default/objects/Car__c/fields/Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Price__c</fullName>
    <description>Original price</description>
    <label>Orignal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>