force-app/main/default/objects/Car__c/recordTypes/Number_of_Cars.recordType-meta.xml
<RecordType>
    <fullName>Number_of_Cars</fullName>
    <active>true</active>
    <label>Number of Cars</label>
</RecordType>