force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model1__c</columns>
    <columns>Sub_Model1__c</columns>
    <columns>Type__c</columns>
    <columns>Electric__c</columns>
    <columns>Mileage__c</columns>
    <columns>Reliability__c</columns>
    <columns>Original_Price__c</columns>
    <columns>Sale_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>