force-app/main/default/objects/Car__c/listViews/Customer_View.listView-meta.xml
<ListView>
    <fullName>Customer_View</fullName>
    <columns>Make__c</columns>
    <columns>Model1__c</columns>
    <columns>Sub_Model1__c</columns>
    <columns>Type__c</columns>
    <columns>Mileage__c</columns>
    <columns>Sale_Price__c</columns>
    <filterScope>Mine</filterScope>
    <label>Customer View</label>
</ListView>