force-app/main/default/objects/Car__c/listViews/Used_Cars.listView-meta.xml
<ListView>
    <fullName>Used_Cars</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Model1__c</columns>
    <columns>Sub_Model1__c</columns>
    <columns>Type__c</columns>
    <columns>Mileage__c</columns>
    <columns>Original_Price__c</columns>
    <filterScope>Mine</filterScope>
    <label>Used Cars</label>
</ListView>